argocd/cluster-resources/apps/jenkins/templates/netpols/allow-required-access-to-jenkins.ftl.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-required-access-to-jenkins
  namespace: ${namespace}
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: jenkins-controller
      app.kubernetes.io/instance: jenkins
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              jenkins/jenkins-jenkins-agent: "true"
      ports:
        - protocol: TCP
          port: http
        - protocol: TCP
          port: agent-listener
<#if ingressActive>
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ${ingressNamespace}
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
      ports:
        - protocol: TCP
          port: http
</#if>
<#if monitoringActive>
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ${monitoringNamespace}
          podSelector:
            matchLabels:
              prometheus: kube-prometheus-stack-prometheus
      ports:
        - protocol: TCP
          port: http
</#if>
<#list bootstrapCidrs as bootstrapCidr>
    - from:
        - ipBlock:
            cidr: ${bootstrapCidr}
      ports:
        - protocol: TCP
          port: http
</#list>
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: restrict-jenkins-agents-ingress
  namespace: ${namespace}
spec:
  podSelector:
    matchLabels:
      jenkins/jenkins-jenkins-agent: "true"
  policyTypes:
    - Ingress
  ingress: []
